--- a/package.json
+++ b/package.json
@@ -1,36 +1,76 @@
 {
   "name": "vue-iconfont",
-  "version": "1.1.0",
-  "description": "iconfont.cn --> Symbol引用(SVG字体) --> Vue组件",
-  "main": "dist/vue-iconfont.common.js",
+  "version": "2.0.0",
+  "description": "一种更优雅的 iconfont.cn 引入方式。",
+  "license": "MIT",
+  "main": "dist/vue-iconfont.cjs.js",
   "module": "dist/vue-iconfont.es.js",
-  "browser": "dist/vue-iconfont.js",
-  "homepage": "https://github.com/fjc0k/vue-iconfont#readme",
+  "unpkg": "dist/vue-iconfont.min.js",
+  "jsdelivr": "dist/vue-iconfont.min.js",
+  "homepage": "https://github.com/fjc0k/vue-iconfont",
+  "author": {
+    "name": "fjc0k",
+    "email": "fjc0kb@gmail.com",
+    "url": "https://github.com/fjc0k"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fjc0k/vue-iconfont.git"
+    "url": "git@github.com:fjc0k/vue-iconfont.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fjc0k/vue-iconfont/issues"
   },
   "keywords": [
-    "vue",
-    "component",
+    "iconfont",
     "icon",
-    "font"
+    "vue",
+    "font",
+    "svg"
   ],
-  "author": {
-    "name": "Funch",
-    "email": "fjc0kb@gmail.com"
-  },
-  "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "bili src/index.js --format all --compress",
-    "test": "cross-env BABEL_ENV=test jest --env jsdom"
+    "test": "jest --coverage",
+    "build": "bdr",
+    "release": "standard-version -a",
+    "postrelease": "git push --follow-tags origin master && npm publish"
+  },
+  "standard-version": {
+    "scripts": {
+      "postbump": "yarn build && git add -A"
+    }
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": "@fir-ui/fir"
+  },
+  "eslintIgnore": [
+    "dist"
+  ],
+  "babel": {
+    "presets": [
+      [
+        "@bdr/bdr",{
+          "env": {
+            "modules": false
+          }
+        }
+      ]
+    ]
   },
   "devDependencies": {
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "bili": "^0.17.4",
-    "cross-env": "^5.0.5",
-    "jest": "^21.0.1",
-    "vue": "^2.4.2"
+    "@babel/core": "^7.0.0-beta.44",
+    "@fir-ui/eslint-config-fir": "^0.3.2",
+    "@vue/test-utils": "^1.0.0-beta.15",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^22.4.3",
+    "bdr": "^1.3.4",
+    "codecov": "^3.0.0",
+    "eslint": "^4.19.1",
+    "jest": "^22.4.3",
+    "standard-version": "^4.3.0",
+    "vue": "^2.5.16",
+    "vue-template-compiler": "^2.5.16"
   }
 }
