--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
 node_js:
-  - node
+  - 9
 cache:
   directories:
     - node_modules
 install:
-  - npm install
+  - yarn
 script:
   - yarn test
 after_success:
