--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-iconfont",
   "version": "2.0.0",
-  "description": "一种更优雅的 iconfont.cn 引入方式。",
+  "description": "更优雅地使用 Iconfont.cn，同时支持 font-class 引入和 symbol 引入。",
   "license": "MIT",
   "main": "dist/vue-iconfont.cjs.js",
   "module": "dist/vue-iconfont.es.js",
@@ -21,11 +21,9 @@
     "url": "https://github.com/fjc0k/vue-iconfont/issues"
   },
   "keywords": [
-    "iconfont",
     "icon",
-    "vue",
-    "font",
-    "svg"
+    "iconfont",
+    "vue"
   ],
   "files": [
     "dist"
@@ -33,6 +31,7 @@
   "scripts": {
     "test": "jest --coverage",
     "build": "bdr",
+    "demo": "bdr dev demo/index.js",
     "release": "standard-version -a",
     "postrelease": "git push --follow-tags origin master && npm publish"
   },
@@ -46,17 +45,25 @@
     "extends": "@fir-ui/fir"
   },
   "eslintIgnore": [
-    "dist"
+    "dist",
+    "demo/iconfont"
   ],
   "babel": {
     "presets": [
       [
-        "@bdr/bdr",{
-          "env": {
-            "modules": false
-          }
-        }
+        "@bdr/bdr"
       ]
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
     ]
   },
   "devDependencies": {
@@ -68,7 +75,9 @@
     "bdr": "^1.3.4",
     "codecov": "^3.0.0",
     "eslint": "^4.19.1",
+    "husky": "^1.0.0-rc.4",
     "jest": "^22.4.3",
+    "lint-staged": "^7.1.0",
     "standard-version": "^4.3.0",
     "vue": "^2.5.16",
     "vue-template-compiler": "^2.5.16"
