--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.2.0",
   "description": "更优雅地使用 Iconfont.cn，同时支持 font-class 引入和 symbol 引入。",
   "license": "MIT",
+  "sideEffects": false,
   "main": "dist/vue-iconfont.cjs.js",
   "module": "dist/vue-iconfont.es.js",
   "unpkg": "dist/vue-iconfont.min.js",
